/*
SPDX-FileCopyrightText: 2022-present Open Networking Foundation <info@opennetworking.org>

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

package atomix.indexed_map.v1;

import "google/protobuf/duration.proto";
import "atomix/primitive/v1/descriptor.proto";
import "atomix/time/v1/timestamp.proto";
import "gogoproto/gogo.proto";

// IndexedMap is a service for a sorted/indexed map primitive
service IndexedMap {
    rpc Create (CreateRequest) returns (CreateResponse) {
        option (atomix.primitive.v1.operation_id) = 1;
        option (atomix.primitive.v1.operation_type) = CREATE;
    }

    rpc Close (CloseRequest) returns (CloseResponse) {
        option (atomix.primitive.v1.operation_id) = 2;
        option (atomix.primitive.v1.operation_type) = CLOSE;
    }

    // Size returns the size of the map
    rpc Size (SizeRequest) returns (SizeResponse) {
        option (atomix.primitive.v1.operation_id) = 3;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // Put puts an entry into the map
    rpc Put (PutRequest) returns (PutResponse) {
        option (atomix.primitive.v1.operation_id) = 4;
        option (atomix.primitive.v1.operation_type) = COMMAND;
    }

    // Get gets the entry for a key
    rpc Get (GetRequest) returns (GetResponse) {
        option (atomix.primitive.v1.operation_id) = 5;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // FirstEntry gets the first entry in the map
    rpc FirstEntry (FirstEntryRequest) returns (FirstEntryResponse) {
        option (atomix.primitive.v1.operation_id) = 6;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // LastEntry gets the last entry in the map
    rpc LastEntry (LastEntryRequest) returns (LastEntryResponse) {
        option (atomix.primitive.v1.operation_id) = 7;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // PrevEntry gets the previous entry in the map
    rpc PrevEntry (PrevEntryRequest) returns (PrevEntryResponse) {
        option (atomix.primitive.v1.operation_id) = 8;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // NextEntry gets the next entry in the map
    rpc NextEntry (NextEntryRequest) returns (NextEntryResponse) {
        option (atomix.primitive.v1.operation_id) = 9;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }

    // Remove removes an entry from the map
    rpc Remove (RemoveRequest) returns (RemoveResponse) {
        option (atomix.primitive.v1.operation_id) = 10;
        option (atomix.primitive.v1.operation_type) = COMMAND;
    }

    // Clear removes all entries from the map
    rpc Clear (ClearRequest) returns (ClearResponse) {
        option (atomix.primitive.v1.operation_id) = 11;
        option (atomix.primitive.v1.operation_type) = COMMAND;
    }

    // Events listens for change events
    rpc Events (EventsRequest) returns (stream EventsResponse) {
        option (atomix.primitive.v1.operation_id) = 12;
        option (atomix.primitive.v1.operation_type) = COMMAND;
    }

    // Entries lists all entries in the map
    rpc Entries (EntriesRequest) returns (stream EntriesResponse) {
        option (atomix.primitive.v1.operation_id) = 13;
        option (atomix.primitive.v1.operation_type) = QUERY;
    }
}

message CreateRequest {
    IndexedMapConfig config = 1 [
        (gogoproto.nullable) = false
    ];
}

message CreateResponse {

}

message CloseRequest {

}

message CloseResponse {

}

message IndexedMapConfig {

}

message SizeRequest {

}

message SizeResponse {
    uint32 size = 1;
}

message PutRequest {
    Key key = 1 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
    Value value = 2;
    atomix.time.v1.Timestamp timestamp = 3;
}

message PutResponse {
    Entry entry = 1;
}

message GetRequest {
    Key key = 1 [
        (gogoproto.nullable) = false
    ];
}

message GetResponse {
    Entry entry = 1;
}

message FirstEntryRequest {

}

message FirstEntryResponse {
    Entry entry = 1;
}

message LastEntryRequest {

}

message LastEntryResponse {
    Entry entry = 1;
}

message PrevEntryRequest {
    uint64 index = 1;
}

message PrevEntryResponse {
    Entry entry = 1;
}

message NextEntryRequest {
    uint64 index = 1;
}

message NextEntryResponse {
    Entry entry = 1;
}

message RemoveRequest {
    Key key = 1 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
    atomix.time.v1.Timestamp timestamp = 2;
}

message RemoveResponse {
    Entry entry = 1;
}

message ClearRequest {

}

message ClearResponse {

}

message EntriesRequest {

}

message EntriesResponse {
    Entry entry = 1 [
        (gogoproto.nullable) = false
    ];
}

message EventsRequest {
    Key key = 1 [
        (gogoproto.nullable) = false
    ];
    bool replay = 2;
}

message EventsResponse {
    Event event = 1 [
        (gogoproto.nullable) = false
    ];
}

message Event {
    Type type = 1;
    Entry entry = 2 [
        (gogoproto.nullable) = false
    ];

    enum Type {
        NONE = 0;
        INSERT = 1;
        UPDATE = 2;
        REMOVE = 3;
        REPLAY = 4;
    }
}

message Key {
    uint64 index = 1;
    string key = 2;
}

message Value {
    bytes value = 1;
    google.protobuf.Duration ttl = 2 [
        (gogoproto.customname) = "TTL",
        (gogoproto.stdduration) = true
    ];
}

message Entry {
    Key key = 1 [
        (gogoproto.embed) = true,
        (gogoproto.nullable) = false
    ];
    Value value = 2;
    atomix.time.v1.Timestamp timestamp = 3;
}
